fix align of elements

--- a/src/styles/catagories/UserCard.module.css
+++ b/src/styles/catagories/UserCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
+  gap: .5rem;
   padding: 1rem;
   border: 1px solid  var(--aq-highlights);
   border-radius: 25px;
@@ -16,8 +16,10 @@
 }
 .user_info{
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 .user_title{
@@ -33,15 +35,33 @@
 }
 
 .score_points {
-color: var(--aq-light);
+  color: var(--aq-light);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: .5rem;
+
 }
 
 .score_correct {
-color: var(--aq-green);
+  color: var(--aq-green);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: .5rem;
+
 }
 
 .score_error {
-color: var(--aq-alert);
+  color: var(--aq-alert);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: .5rem;
+
 }
 
 .score_points p, 
